Add SEO plugin and enable it in the configuration

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.0.0",
+    "@strapi/plugin-seo": "^1.9.9",
     "@strapi/plugin-users-permissions": "5.0.0",
     "@strapi/strapi": "5.0.0",
     "better-sqlite3": "9.4.3",
